executing installer as forge user/group, removed permgen_size, since this is no longer used in Java 8+